--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @shop do |f| %>
+  <br>
   <div>
     <%= f.label :name %>
     <%= f.text_field :name %>
@@ -43,5 +44,6 @@
     <% end %>
   </tbody>
 </table>
-<%= f.submit %>
+<button class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded'><%= f.submit %></button>
+
 <% end %>
